--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -82,13 +82,12 @@
 
   .hamburger {
     position: absolute;
-    top: 3px;
+    top: 12px;
     right: 20px;
     display: inline-block;
   }
 
   .nav-container {
-    
     top: 0;
     width: 100%;
     height: 72px !important;
@@ -262,15 +261,16 @@ button.sign-in {
 }
 
 #nav-toggle:checked~label {
-  background-color: grey;
-  color: white;
-  -webkit-transform: translateX(-250px);
-  transform: translateX(-250px);
-  margin-top: 9px;
+  /* background-color: grey; */
+  color: black;
+  /* -webkit-transform: translateX(-250px);
+  transform: translateX(-250px); */
+padding: 9px 3px !important;
 }
 
 #nav-toggle:checked~label::before {
-  content: "Close";
+  content: 'X';
+  font-size: 36px;
 }
 
 #nav-toggle:checked~label .toggle-words {
@@ -289,6 +289,7 @@ button.sign-in {
   transition: .53s transform;
   -webkit-transition-timing-function: cubic-bezier(0.38, 0.52, 0.37, 1);
   transition-timing-function: cubic-bezier(0.38, 0.52, 0.37, 1);
+  margin-top: 67px;
 }
 
 .menu ul {
